recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:3: error: not found: value step
    setColor(current(step))
                     ^