recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if (steps>0){
    setColor(current(step))
    baisseCrayon()
  	avance(length)
    droite(angle)
    tree(steps-1,shrink*length,angle,shrink)
    gauche(2*angle)
    tree(steps-1,shrink*length,angle,shrink)
    leveCrayon()
  }
}